@@ -1,3 +1,6 @@
+Feb 23, 2022
+  strain specific variants: added generation and loading of strain specific variant and damaging variants for rn7
+
 Feb 04, 2022
   strains: added verbose gff3 header
 
